--- a/htmls/alert/list.html
+++ b/htmls/alert/list.html
@@ -11,6 +11,7 @@
 	<link rel="stylesheet" type="text/css" href="{{ static_url('css/alert.css') }}"/>
 {% end %}
 {% block bodyleft %}
+<div class="box">
 	<table class="table table-condensed bg-white">
 		<thead>
 			<tr>
@@ -27,5 +28,6 @@
 			{% end %}
 		</tbody>
 	</table>
+</div>
 {% end %}
 {% block bodyright %}{% end %}
