--- a/htmls/event/approval.html
+++ b/htmls/event/approval.html
@@ -39,7 +39,7 @@
 {% end %}
 
 {% block bodyleft %}
-	<div class="accordion" id="accordion">
+	<div class="accordion box" id="accordion">
 		{% for u in userlist %}
 		<div class="accordion-group">
 			<div class="accordion-heading">
