--- a/htmls/event/publish_step_one.html
+++ b/htmls/event/publish_step_one.html
@@ -133,6 +133,7 @@
 {% end %}
 
 {% block bodyleft %}
+<div class="box">
 	<form class="form-horizontal event-form bg-white" method="POST" action="/event/puba/">
 		<fieldset>
 			<legend>活动发布---第一步</legend>
@@ -239,7 +240,7 @@
 			</div>
 		</fieldset>
 	</form>
-	
+</div>
 	<div id="editor" class="modal hide fade" style="width:700px;margin-left:-350px;">
 		<div class="modal-header">
 			<a class="close" data-dismiss="modal">×</a>
