--- a/htmls/event/publish_step_two.html
+++ b/htmls/event/publish_step_two.html
@@ -18,6 +18,7 @@
 {% end %}
 
 {% block bodyleft %}
+<div class="box">
 	<form class="form-horizontal bg-white" method="POST" action="/event/pubb/">
 		<fieldset>
 			<legend>活动发布---第二步</legend>
@@ -63,5 +64,6 @@
 			</div>
 		</fieldset>
 	</form>
+</div>
 {% end %}
 {% block bodyright %}{% end %}
