--- a/htmls/guide/index.html
+++ b/htmls/guide/index.html
@@ -15,7 +15,9 @@
 {% end %}
 {% autoescape None %}
 {% block bodyleft %}
-<h1>导购</h1>
+<div class="box">
+	<h1>导购</h1>
+</div>
 {% end %}
 {% block bodyright %}{% end %}
 
