--- a/htmls/map/event.html
+++ b/htmls/map/event.html
@@ -14,7 +14,7 @@
 	<link rel="stylesheet" type="text/css" href="{{ static_url('css/map.css') }}"/>
 {% end %}
 {% block bodyleft %}
-	<div id="wrapper" class="fwrap" style="background:white;padding:15px;height:600px;width:745px;">
+	<div id="wrapper box" class="fwrap" style="background:white;padding:15px;height:600px;width:745px;">
 		<form action="/map/" method="post">
 			<div id="map_canvas" ipLocID="location" ipRouteID="route" style="width:600px; height:600px"></div>
 			<br/><input type="submit" value="完毕提交">
