--- a/htmls/note/item.html
+++ b/htmls/note/item.html
@@ -20,9 +20,13 @@
 {% end %}
 {% autoescape None %}
 {% block bodyleft %}
+<div class="box">
 	<div id="note-item">
-		<h1>{{ title }}</h1><em>{{ created }}</em>
-		<div>{{ list2url(tags) }}</div>
+		<h1>{{ title }}</h1><br/>
+		<span><a href="/weibo/she/{{owner}}" title="{{nick}}">{{ nick }}</a></span>
+		<span>于&nbsp;{{ created }}&nbsp;发表</span>
+		<span>标签:{{ list2url(tags) }}</span>
+		<br/><br/><br/>
 		<div class="p">{{ content }}</div>
 		<div class="clear"></div>
 		<div class="pull-right">{% if verify(perm, 0x30) %}<a href="/note/{{id}}/edit/">编辑</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="/note/{{id}}/delete/">删除</a>{% end %}</div>
@@ -41,6 +45,7 @@
 			<div id="wb_bottom" class="bottom wb_item"><a href="#" style="display:block;text-align:center;" onclick="Weibo.extend(this);return false;"></a><input type="hidden" value="0"></div>
 		</div>
 	</div>
+</div>
 {% end %}
 {% block bodyright %}
 	<h3>相关活动</h3>
