--- a/htmls/profile/auth.html
+++ b/htmls/profile/auth.html
@@ -2,6 +2,7 @@
 
 {% block static %}{% end %}
 {% block bodyleft %}
+<div class="box">
 	<form class="form-horizontal row-fluid bg-white" name="content-form" method="POST" action="/auth/">
 		<fieldset>
 			<div class="control-group error">
@@ -14,6 +15,7 @@
 			</div>
 		</fieldset>
 	</form>
+</div>
 {% end %}
 
 {% block bodyright %}{% end %}
