--- a/htmls/profile/profile.html
+++ b/htmls/profile/profile.html
@@ -16,7 +16,9 @@
 	{% block static-added %}{% end %}
 {% end %}
 {% block bodyleft %}
-<h2>{{title}}</h2>
+<div class="box">
+	<h2>{{title}}</h2>
+</div>
 {% end %}
 {% block bodyright %}
 <div id="alert"></div>
