--- a/htmls/profile/setting.html
+++ b/htmls/profile/setting.html
@@ -27,6 +27,7 @@
 	{% block static-added %}{% end %}
 {% end %}
 {% block bodyleft %}
+<div class="box">
 	<ul class="nav nav-tabs row-fluid">
 		<li class="active"><a>基本设置</a></li>
 		<li class="hide"><a href="/account/setting/alert/">消息设置</a></li>
@@ -118,5 +119,6 @@
 			</form>
 		</div>
 	</div>
+</div>
 {% end %}
 {% block bodyright %}{% end %}
