--- a/htmls/profile/setting_alert.html
+++ b/htmls/profile/setting_alert.html
@@ -2,6 +2,7 @@
 
 {% block static %}{% end %}
 {% block bodyleft %}
+<div class="box">
 	<ul class="nav nav-tabs row-fluid">
 		<li><a href="/account/setting/">基本设置</a></li>
 		<li class="active"><a>消息设置</a></li>
@@ -21,5 +22,6 @@
 			</div>
 		</fieldset>
 	</form>
+</div>
 {% end %}
 {% block bodyright %}{% end %}
