--- a/htmls/weibo/index.html
+++ b/htmls/weibo/index.html
@@ -17,7 +17,7 @@
 	<link rel="stylesheet" type="text/css" href="{{ static_url('css/weibo.css') }}"/>
 {% end %}
 {% block bodyleft %}
-	<div id="weibo" class="bg-white">
+	<div id="weibo" class="box">
 		<div class="num" style="display:block;font-size:16px;margin-bottom:5px;">还可以输入
 			<span style="font-size:24px;color:#ff9933;" id="num">140</span> 字
 		</div>
