--- a/htmls/note/index.html
+++ b/htmls/note/index.html
@@ -24,26 +24,30 @@
 {% end %}
 {% autoescape None %}
 {% block bodyleft %}
-	<div class="accordion bg-white" id="note-list">
+	<div class="accordion box" id="note-list">
 		{% for n in note_l %}
 		<div class="face pull-left">
 			<a href="/weibo/she/{{ n['owner'] }}/" title="{{ n.get('nick', '') }}">
-				<img title="" alt="" width=50 height=50 src="/image/avatar/{{ n['owner'] }}_50"/>
+				<img title="" alt="" width=50 height=50 src="/image/avatar/{{ n['owner'] }}_50"  onerror="this.src='/static/img/default_avatar.gif';"/>
 			</a>
-			<span>{{ n.get('nick','') }}</span>
+			<span><a href="/weibo/she/{{ n['owner'] }}/" title="{{ n.get('nick', '') }}">{{ n.get('nick','') }}</a></span>
 		</div>
-		<div class="accordion-group pull-right" style="width:630px;">
-			<div class="accordion-heading">
+		<div class="accordion-group pull-right" style="width:620px;border-width:0px;">
+			<div class="accordion-heading" style="background:#F0FFF0;">
 				<a target="_blank" href="/note/{{ n['id'] }}/" class="accordion-toggle pull-left">{{ n['title'] }}</a>
 				<a class="accordion-toggle pull-right" data-toggle="collapse" data-parent="#accordion" href="#{{ n['id'] }}" style="width:30px;"><i class="icon-chevron-down"></i></a>
 				<div style="clear:both;"></div>
 			</div>
-			<div class="accordion-inner abstract">{{ abstract(n['content'], 200) }}</div>
+			<div class="accordion-inner abstract" style="border-top-width:0px;">
+				{{ abstract(n['content'], 200) }}
+				<div style="margin:10px 0px;font-size:13px;">{{ n['created'] }}</div>
+			</div>
 			<div id="{{ n['id'] }}" class="accordion-body collapse" style="height: 0px;">
 				<div class="accordion-inner">
 					<div class="p">{{ n['content'] }}</div>
 					<div class="clear"></div>
 				</div>
+				<div style="margin:10px 0px;font-size:13px;">{{ n['created'] }}</div>
 			</div>
 		</div>
 		<div class="clear"></div>
