--- a/htmls/search/index.html
+++ b/htmls/search/index.html
@@ -17,7 +17,8 @@
 	<link href="{{ static_url('css/search.css') }}" rel="stylesheet">
 {% end %}
 {% block bodyleft %}
-	<div id="cse" style="width: 100%;">加载中...</div>
+<div class="">
+	<div id="cse" style="width:100%;">加载中...</div>
 	<script language="javascript" type="text/javascript">
 		google.load('search', '1', {language : 'zh-CN'});
 			google.setOnLoadCallback(function() {
@@ -26,5 +27,6 @@
 				customSearchControl.draw('cse');
 			}, true);
 	</script>
+</div>
 {% end %}
 {% block bodyright %}{% end %}
