--- a/htmls/event/publish_step_one.html
+++ b/htmls/event/publish_step_one.html
@@ -189,7 +189,7 @@
 				</div>
 			</div>
 			<div class="control-group">
-				<label class="control-label" for="focusedInput">活动地点:</label>
+				<label class="control-label" for="focusedInput">开始地点:</label>
 				<div class="controls">
 					<input class="input-xlarge" name="place" type="text" value="" rel="popover" data-content="天南海北，海角天涯 天荒地老 海枯石烂 看着办吧！" data-original-title="施主自哪里来，往“哪里”去？">
 				</div>
@@ -245,7 +245,7 @@
 	<div id="editor" class="modal hide fade" style="width:700px;margin-left:-350px;">
 		<div class="modal-header">
 			<a class="close" data-dismiss="modal">×</a>
-			<h3>行成安排</h3>
+			<h3>行程安排</h3>
 		</div>
 		<div class="modal-body">
 			<div class="tabbable tabs-right">
