--- a/htmls/album/index.html
+++ b/htmls/album/index.html
@@ -1,9 +1,9 @@
 {% extends ../frame.html %}
 
 {% block meta %}
-	<title>相册_北京户外网</title>
+	<title>相册_深呼吸</title>
 	<meta name="keywords" content="风景 户外照片 驴友照片">
-	<meta name="description" content="北京户外网相册旨在为驴友展示户外旅游时拍下来的人物、风景、美食、风土人情等照片汇集成册，供大家欣赏、讨论 供自己回味、记录。">
+	<meta name="description" content="深呼吸相册旨在为驴友展示户外旅游时拍下来的人物、风景、美食、风土人情等照片汇集成册，供大家欣赏、讨论 供自己回味、记录。">
 {% end %}
 {% block static %}
 	<script language="javascript" type="text/javascript">
