--- a/htmls/album/item.html
+++ b/htmls/album/item.html
@@ -1,9 +1,9 @@
 {% extends ../frame.html %}
 
 {% block meta %}
-	<title>{{title}}_相册_北京户外网</title>
+	<title>{{title}}_相册_深呼吸</title>
 	<meta name="keywords" content="风景 户外照片 驴友照片 {{title}}">
-	<meta name="description" content="北京户外网相册{{title}}通过顶、踩、评论等功能展现驴友之间的图片交流">
+	<meta name="description" content="深呼吸相册{{title}}通过顶、踩、评论等功能展现驴友之间的图片交流">
 {% end %}
 
 {% block static %}
