--- a/htmls/alert/list.html
+++ b/htmls/alert/list.html
@@ -1,9 +1,9 @@
 {% extends ../frame.html %}
 
 {% block meta %}
-	<title>提醒_北京户外网</title>
+	<title>提醒_深呼吸</title>
 	<meta name="keywords" content="活动提醒 游记通知 驴友微博提醒">
-	<meta name="description" content="北京户外网提醒旨在为驴友提供全面儿友好的提示以便驴友更好交流 参加活动 游记、攻略讨论 发布活动 等等操作。">
+	<meta name="description" content="深呼吸提醒旨在为驴友提供全面儿友好的提示以便驴友更好交流 参加活动 游记、攻略讨论 发布活动 等等操作。">
 {% end %}
 
 {% block static %}
