--- a/htmls/box.html
+++ b/htmls/box.html
@@ -4,8 +4,8 @@
 		<meta charset="utf-8">
 		{% block meta %}{% end %}
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta property="qc:admins" content="1051431447605711226375" />
-		<meta property="wb:webmaster" content="98499125f4d97e8f" />
+		<meta property="qc:admins" content="10514314476305605016375" />
+		<meta property="wb:webmaster" content="84f3893ea74374e7" />
 		<script src="{{ static_url('js/bs/html5.js') }}"></script>
 		<script src="{{ static_url('js/jquery.min.js') }}" type="text/javascript"></script>
 		<script src="{{ static_url('js/jquery.own.js') }}" type="text/javascript"></script>
@@ -34,7 +34,7 @@
 					</a>
 					<div class="nav-collapse">
 						<ul class="nav">
-							<li><a class="brand" href="/">北京户外网</a></li>
+							<li><a class="brand" href="/">深呼吸<span style="font-size:12px;">&nbsp;户外网</span></a></li>
 							<li class="divider-vertical"></li>
 							<li id="nav-weibo" class=""><a href="/weibo/">微博</a></li>
 							<li id="nav-event" class=""><a href="/event/">活动</a></li>
@@ -113,7 +113,7 @@
     <script type="text/javascript" src="{{ static_url('js/bs/application.js') }}"></script>
 	<script type="text/javascript">
 		var _gaq = _gaq || [];
-		_gaq.push(['_setAccount', 'UA-31261475-1']);
+		_gaq.push(['_setAccount', 'UA-31387623-1']);
 		_gaq.push(['_trackPageview']);
 		(function() {
 			var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
