--- a/htmls/contact.html
+++ b/htmls/contact.html
@@ -1,9 +1,9 @@
 {% extends frame.html %}
 
 {% block meta %}
-	<title>联系我们_北京户外网</title>
-	<meta name="keywords" content="北京户外网 联系方式 七三工作室 户外群号">
-	<meta name="description" content="北京户外网的联系方式包括qq qq群。">
+	<title>联系我们_深呼吸</title>
+	<meta name="keywords" content="深呼吸 联系方式 七三工作室 户外群号">
+	<meta name="description" content="深呼吸的联系方式包括qq qq群。">
 {% end %}
 
 {% block static %}{% end %}
