--- a/htmls/event/approval.html
+++ b/htmls/event/approval.html
@@ -1,9 +1,9 @@
 {% extends ../frame.html %}
 
 {% block meta %}
-	<title>活动审核_北京户外网</title>
+	<title>活动审核_深呼吸</title>
 	<meta name="keywords" content="活动 审核 驴友 通过">
-	<meta name="description" content="北京户外网活动审核方便领队统计规范活动的人员。">
+	<meta name="description" content="深呼吸活动审核方便领队统计规范活动的人员。">
 {% end %}
 
 {% block static %}
