--- a/htmls/event/falls.html
+++ b/htmls/event/falls.html
@@ -1,9 +1,9 @@
 {% extends ../frame.html %}
 
 {% block meta %}
-	<title>活动列表_北京户外网</title>
+	<title>活动列表_深呼吸</title>
 	<meta name="keywords" content="活动 登山 游泳 骑行 穿越 足球 篮球 驴友">
-	<meta name="description" content="北京户外网活动列表展示户外活动，方便驴友查询自己喜欢的户外活动">
+	<meta name="description" content="深呼吸活动列表展示户外活动，方便驴友查询自己喜欢的户外活动">
 {% end %}
 
 {% block static %}
