--- a/htmls/event/item.html
+++ b/htmls/event/item.html
@@ -1,7 +1,7 @@
 {% extends ../frame.html %}
 
 {% block meta %}
-	<title>{{title}}_北京户外网</title>
+	<title>{{title}}_深呼吸</title>
 	<meta name="keywords" content="{{title}} {{ list2txt(place) }} 户外 驴友 活动">
 	<meta name="description" content="活动{{title}}地点在{{ list2txt(place) }}给力发布">
 {% end %}
