--- a/htmls/event/member.html
+++ b/htmls/event/member.html
@@ -1,9 +1,9 @@
 {% extends ../frame.html %}
 
 {% block meta %}
-	<title>活动人员_北京户外网</title>
+	<title>活动人员_深呼吸</title>
 	<meta name="keywords" content="驴友 参加 户外活动">
-	<meta name="description" content="北京户外网参加户外人员列表">
+	<meta name="description" content="深呼吸参加户外人员列表">
 {% end %}
 
 {% block static %}
