--- a/htmls/event/publish_step_one.html
+++ b/htmls/event/publish_step_one.html
@@ -1,9 +1,9 @@
 {% extends ../frame.html %}
 
 {% block meta %}
-	<title>活动发布_北京户外网</title>
+	<title>活动发布_深呼吸</title>
 	<meta name="keywords" content="活动发布 户外活动发布 领队发活动">
-	<meta name="description" content="北京户外网最友好的户外活动发布系统">
+	<meta name="description" content="深呼吸最友好的户外活动发布系统">
 {% end %}
 
 {% block static %}
