--- a/htmls/map/item.html
+++ b/htmls/map/item.html
@@ -1,7 +1,7 @@
 {% extends ../frame.html %}
 
 {% block meta %}
-	<title>地图_北京户外网</title>
+	<title>地图_深呼吸</title>
 	<meta name="keywords" content="地图 活动地点">
 	<meta name="description" content="更好的展现户外活动地点、集合地点等等">
 {% end %}
