--- a/htmls/map/weibo.html
+++ b/htmls/map/weibo.html
@@ -1,7 +1,7 @@
 {% extends ../frame.html %}
 
 {% block meta %}
-	<title>微博地图_北京户外网</title>
+	<title>微博地图_深呼吸</title>
 	<meta name="keywords" content="地图 微博 微博地图">
 	<meta name="description" content="更好的展现驴友户外微博">
 {% end %}
