--- a/htmls/note/index.html
+++ b/htmls/note/index.html
@@ -1,9 +1,9 @@
 {% extends ../frame.html %}
 
 {% block meta %}
-	<title>游记_北京户外网</title>
+	<title>游记_深呼吸</title>
 	<meta name="keywords" content="游记列表 户外游记 游记 攻略 见闻 旅游记录">
-	<meta name="description" content="北京户外网游记功能旨在为驴友提供记录户外点滴、行程、见闻等等以文字、图片、视频等形式展现出来的">
+	<meta name="description" content="深呼吸游记功能旨在为驴友提供记录户外点滴、行程、见闻等等以文字、图片、视频等形式展现出来的">
 {% end %}
 
 {% block static %}
