--- a/htmls/note/write.html
+++ b/htmls/note/write.html
@@ -1,9 +1,9 @@
 {% extends ../frame.html %}
 
 {% block meta %}
-	<title>写游记_北京户外网</title>
+	<title>写游记_深呼吸</title>
 	<meta name="keywords" content="写游记 写攻略 户外攻略 户外游记">
-	<meta name="description" content="北京户外网游记功能通过图片、文字、以及视频等形式旨在为驴友提供记录户外点滴、行程、见闻等等以文字、图片、视频等形式展现出来">
+	<meta name="description" content="深呼吸游记功能通过图片、文字、以及视频等形式旨在为驴友提供记录户外点滴、行程、见闻等等以文字、图片、视频等形式展现出来">
 {% end %}
 
 {% block static %}
