--- a/htmls/profile/profile.html
+++ b/htmls/profile/profile.html
@@ -3,7 +3,7 @@
 {% block meta %}
 	<title>{{ current_user }}主页</title>
 	<meta name="keywords" content="{{ current_user }}主页 户外 驴友">
-	<meta name="description" content="北京户外网{{ current_user }}驴友的个人主页">
+	<meta name="description" content="深呼吸{{ current_user }}驴友的个人主页">
 {% end %}
 
 {% block static %}
