--- a/htmls/search/index.html
+++ b/htmls/search/index.html
@@ -1,9 +1,9 @@
 {% extends ../frame.html %}
 
 {% block meta %}
-	<title>搜索_北京户外网</title>
+	<title>搜索_深呼吸</title>
 	<meta name="keywords" content="活动搜索 游记搜索 景点搜索 ">
-	<meta name="description" content="北京户外网搜索，让驴友们更精确的找到户外活动，户外游记等等">
+	<meta name="description" content="深呼吸搜索，让驴友们更精确的找到户外活动，户外游记等等">
 {% end %}
 
 {% block static %}
@@ -22,7 +22,7 @@
 	<script language="javascript" type="text/javascript">
 		google.load('search', '1', {language : 'zh-CN'});
 			google.setOnLoadCallback(function() {
-				var customSearchOptions = {};  var customSearchControl = new google.search.CustomSearchControl('000471135523793451601:WMX-1732778293', customSearchOptions);
+				var customSearchOptions = {};  var customSearchControl = new google.search.CustomSearchControl('000471135523793451601:WMX-1320301033', customSearchOptions);
 				customSearchControl.setResultSetSize(google.search.Search.LARGE_RESULTSET);
 				customSearchControl.draw('cse');
 			}, true);
