--- a/htmls/sitemap.html
+++ b/htmls/sitemap.html
@@ -3,7 +3,7 @@
 {% block meta %}
 	<title>网站地图</title>
 	<meta name="keywords" content="户外 驴友 登山 游泳 骑行 微博 相册 游记 标签 攻略">
-	<meta name="description" content="北京户外网网组织结构">
+	<meta name="description" content="深呼吸网组织结构">
 {% end %}
 
 {% block static %}{% end %}
