--- a/htmls/weibo/she.html
+++ b/htmls/weibo/she.html
@@ -3,7 +3,7 @@
 {% block meta %}
 	<title>微博</title>
 	<meta name="keywords" content="微博">
-	<meta name="description" content="北京户外网个人微博展示">
+	<meta name="description" content="深呼吸个人微博展示">
 {% end %}
 
 {% block static %}
