--- a/htmls/guide/index.html
+++ b/htmls/guide/index.html
@@ -1,7 +1,7 @@
 {% extends ../frame.html %}
 
 {% block meta %}
-	<title>导购_北京户外网</title>
+	<title>导购_深呼吸</title>
 	<meta name="keywords" content="户外装备 驴友装备 旅游装备 扎营工具">
 	<meta name="description" content="方便驴友最快最精准的找到想要购买的户外装备">
 {% end %}
